# gitlecalc

./: .gitignore  CMakeLists.txt  Makefile  calc  gitlecalculator.cpp  gitlecalculator.h  gitlecalculator.ui  libcalc.cpp  libcalc.h  main.cpp  main.cxx  main_test.cpp  main_test.cxx  mainwindow.cpp  mainwindow.h  mainwindow.ui
libcalc/: CMakeLists.txt  libcalc.cxx  libcalc.h
